feat: parse request into struct

--- a/conf/mnginx.conf
+++ b/conf/mnginx.conf
@@ -1,32 +1,26 @@
-# 默认是 HTTP 服务器
-server:
-  listen: 80 # 监听的端口
-  server_name: localhost # 监听的域名
-  error_log: /mnt/log/nginx/localhost/error.log
-  access_log: /mnt/log/nginx/localhost/access.log
-  location:
-    rule: ^~      # 匹配规则
-    pattern: /    # 匹配的路径
-    proxy_set_header: "Host example.com"  # 设置请求头
-    proxy_pass: "127.0.0.1:6551"   # 转发的地址
-  location:
+server: server
+  listen: 1234
+  server_name: localhost
+  error_log: /home/user1/Projects/mNginx/runtime_data/log/1234/error.log
+  access_log: /home/user1/Projects/mNginx/runtime_data/log/1234/access.log
+  location: location
     rule: ^~
-    pattern: /static    # 匹配的路径
-    root: /mnt/static   # 静态文件目录
-    index: index.html   # 默认返回值
-server:
-  listen: 81 # 监听的端口
-  server_name: localhost # 监听的域名
-  error_log: /mnt/log/nginx/localhost/error.log
-  access_log: /mnt/log/nginx/localhost/access.log
-  location:
-    rule: ^~      # 匹配规则
-    pattern: /    # 匹配的路径
-    proxy_set_header: "Host example.com"  # 设置请求头
-    proxy_pass: "http://127.0.0.1:6551"   # 转发的地址
-  location:
+    pattern: /
+    proxy_set_header: "Host $host"
+    proxy_pass: "http://127.0.0.1:7000"
+  location: location
     rule: ^~
-    pattern: /static    # 匹配的路径
-    root: /mnt/static   # 静态文件目录
-    index: index.html   # 默认返回值
+    pattern: /static
+    root: /home/user1/Projects/mNginx/runtime_data/static
+    index: index.html
 
+server: server
+  listen: 1235
+  server_name: localhost
+  error_log: /mnt/log/nginx/localhost/error.log
+  access_log: /mnt/log/nginx/localhost/access.log
+  location: location
+    rule: ^~
+    pattern: /
+    proxy_set_header: "Host www.baidu.com"
+    proxy_pass: "220.181.38.148:80"
