bugfix: definition of mnginx.conf

--- a/conf/mnginx.conf
+++ b/conf/mnginx.conf
@@ -6,8 +6,8 @@ server: server
   location: location
     rule: ^~
     pattern: /
-    proxy_set_header: "Host $host"
-    proxy_pass: "http://127.0.0.1:7000"
+    proxy_set_header: Host $host
+    proxy_pass: http://127.0.0.1:8080/
   location: location
     rule: ^~
     pattern: /static
@@ -16,11 +16,11 @@ server: server
 
 server: server
   listen: 1235
-  server_name: localhost
+  server_name: localhost1
   error_log: /home/user1/Projects/mNginx/runtime_data/log/localhost/error.log
   access_log: /home/user1/Projects/mNginx/runtime_data/log/localhost/access.log
   location: location
     rule: ^~
     pattern: /
-    proxy_set_header: "Host www.baidu.com"
-    proxy_pass: "220.181.38.148:80"
+    proxy_set_header: Host www.baidu.com
+    proxy_pass: http://220.181.38.148:80/
