bugfix: function parameters lost in concurrent scenarios.

--- a/conf/mnginx.conf
+++ b/conf/mnginx.conf
@@ -4,7 +4,7 @@ server: server
   error_log: /home/user1/Projects/mNginx/runtime_data/log/1234/error.log
   access_log: /home/user1/Projects/mNginx/runtime_data/log/1234/access.log
   location: location
-    rule: ^~
+    rule: .
     pattern: /
     proxy_set_header: Host $host
     proxy_pass: http://127.0.0.1:8080/
@@ -20,7 +20,7 @@ server: server
   error_log: /home/user1/Projects/mNginx/runtime_data/log/localhost/error.log
   access_log: /home/user1/Projects/mNginx/runtime_data/log/localhost/access.log
   location: location
-    rule: ^~
+    rule: .
     pattern: /
     proxy_set_header: Host www.baidu.com
-    proxy_pass: http://220.181.38.148:80/
+    proxy_pass: http://127.0.0.1:8081/
