feat: build and run using a shell-script

--- a/conf/mnginx.conf
+++ b/conf/mnginx.conf
@@ -13,6 +13,11 @@ server: server
     pattern: /static
     root: /home/user1/Projects/mNginx/runtime_data/static
     index: index.html
+  location: location
+    rule: ^~
+    pattern: /static/folder
+    root: /home/user1/Projects/mNginx/runtime_data/static_folder
+    index: index.html
 
 server: server
   listen: 1235
